--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,23 +1,23 @@
 {
 	"nxConsole.nxWorkspacePath": "",
 	"workbench.colorCustomizations": {
-		"activityBar.activeBackground": "#ff33ff",
-		"activityBar.background": "#ff33ff",
-		"activityBar.foreground": "#15202b",
-		"activityBar.inactiveForeground": "#15202b99",
-		"activityBarBadge.background": "#dfdf00",
-		"activityBarBadge.foreground": "#15202b",
+		"activityBar.activeBackground": "#6800b5",
+		"activityBar.background": "#6800b5",
+		"activityBar.foreground": "#e7e7e7",
+		"activityBar.inactiveForeground": "#e7e7e799",
+		"activityBarBadge.background": "#000000",
+		"activityBarBadge.foreground": "#e7e7e7",
 		"commandCenter.border": "#e7e7e799",
-		"sash.hoverBorder": "#ff33ff",
-		"statusBar.background": "#ff00ff",
+		"sash.hoverBorder": "#6800b5",
+		"statusBar.background": "#4b0082",
 		"statusBar.foreground": "#e7e7e7",
-		"statusBarItem.hoverBackground": "#ff33ff",
-		"statusBarItem.remoteBackground": "#ff00ff",
+		"statusBarItem.hoverBackground": "#6800b5",
+		"statusBarItem.remoteBackground": "#4b0082",
 		"statusBarItem.remoteForeground": "#e7e7e7",
-		"titleBar.activeBackground": "#ff00ff",
+		"titleBar.activeBackground": "#4b0082",
 		"titleBar.activeForeground": "#e7e7e7",
-		"titleBar.inactiveBackground": "#ff00ff99",
+		"titleBar.inactiveBackground": "#4b008299",
 		"titleBar.inactiveForeground": "#e7e7e799"
 	},
-	"peacock.color": "magenta"
+	"peacock.color": "indigo"
 }
