--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@nx/angular": "^20.4.6",
 		"@playwright/test": "^1.50.1",
 		"@tailwindcss/typography": "^0.5.16",
+		"ace-builds": "^1.39.0",
 		"axios": "^1.6.0",
 		"express": "^4.21.2",
 		"fs": "^0.0.1-security",
